# TradingAgents-CN

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.hub.nginx.yml  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  simple_test.py  test-api.ps1  test_screening_api.py
.claude/: settings.local.json
.github/workflows/: ci.yml  docker-publish.yml  ghcr-cleanup.yml  test-mcp.yml
app/: __main__.py  main.py  worker.py
app/config/: settings.json
app/constants/: __init__.py  llm_defaults.py  model_capabilities.py
app/core/: __init__.py  async_utils.py  auth_rate_limiter.py  config.py  config_bridge.py  config_compat.py  config_initializer.py  database.py  dev_config.py  env.py  error_handling.py  logging_config.py  logging_context.py  lru_cache.py  rate_limiter.py  redis_client.py  response.py  startup_validator.py  task_registry.py  unified_config.py
app/data/: README.md  __init__.py  config.py  data_completeness_checker.py  data_source_manager.py  interface.py  manager.py  reader.py  realtime_metrics.py  stock_data_service.py  us_stock_universe.py
app/engine/: __init__.py  default_config.py
app/middleware/: csrf.py  error_handler.py  operation_log_middleware.py  rate_limit.py  request_id.py
app/models/: analysis.py  config.py  notification.py  operation_log.py  screening.py  skill.py  stock_data_models.py  stock_models.py  user.py
app/routers/: agent_configs.py  agents.py  akshare_init.py  analysis.py  auth_db.py  baostock_init.py  cache.py  config.py  database.py  favorites.py  financial_data.py  health.py  historical_data.py  internal_messages.py  logs.py  mcp.py  model_capabilities.py  multi_market_stocks.py  multi_period_sync.py  multi_source_sync.py  news_data.py  notifications.py  operation_logs.py  paper.py  prompts.py  reports.py  scheduler.py  screening.py  skills.py  social_media.py  sse.py  tags.py  (+8 more)
config/: logging.toml  logging_docker.toml  models.json  pricing.json
deploy/: .env.example  README.md
docker/: .env.docker  Dockerfile.backend  Dockerfile.frontend  docker-entrypoint.sh
docs/: deepseek-api-guide.md  tsc.md  全市场股票数据架构设计文档.md  数据获取流程.md  智能体工作流程.md
frontend/: .gitignore  README.md  env.d.ts  package(BG8CFB的冲突副本1_2026-05-17 10-52-15).json  package-lock.json  package.json  vite.config.ts
frontend-react/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
scripts/: sync_stock_info_to_mongodb.py
tests/: README.md  conftest.py  test_infra.py
(+1097 files in other folders)
