[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "1.3.1"
description = "TradingAgents-CN: Chinese stock analysis platform with multi-agent AI system"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    # 后端API框架和服务器
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    # 数据库和缓存
    "motor>=3.3.0",
    "pymongo>=4.0.0",
    "redis>=5.0.0",
    # 认证和安全
    "PyJWT>=2.0.0",
    "bcrypt>=4.0.0",
    # 任务调度和异步
    "apscheduler>=3.10.0",
    "aiofiles>=0.8.0",
    # HTTP客户端和SSE
    "httpx>=0.24.0",
    "sse-starlette>=1.0.0",
    # 日志处理
    "concurrent-log-handler>=0.9.24",  # Windows 友好的日志轮转处理器
    # 数据源和金融数据
    "akshare>=1.17.86",
    "baostock>=0.8.8",
    "finnhub-python>=2.4.23",
    "tushare>=1.4.21",
    "yfinance>=0.2.63",
    # AI和LLM
    "chromadb>=1.0.12",
    "dashscope>=1.20.0",
    "langchain>=1.1.0",
    "langchain-anthropic>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langchain-mcp-adapters>=0.2.1",  # 更新到最新稳定版 (2025-12-09)
    "mcp>=1.0.0",
    "langchain-openai>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.4",
    "openai>=1.0.0,<2.0.0",
    # 数据处理和分析
    "pandas>=2.3.0",
    # 网络爬虫和解析
    "curl-cffi>=0.6.0",  # 模拟真实浏览器TLS指纹，绕过反爬虫检测
    "requests>=2.32.4",
    # 文档和格式化
    "markdown>=3.4.0",
    "pypandoc>=1.11",
    "python-docx>=0.8.11",  # Word文档处理，用于修复文本方向
    "pdfkit>=1.0.0",  # PDF生成工具，需要wkhtmltopdf
    # 工具和辅助
    "psutil>=6.1.0",
    "python-dotenv>=1.0.0",
    "pytz>=2025.2",
    "rich>=14.0.0",
    "setuptools>=80.9.0",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
]

[project.optional-dependencies]
qianfan = ["qianfan>=0.4.12.3"]

[project.scripts]
tradingagents = "scripts.examples.run_analysis:main"

[tool.setuptools.packages.find]
include = ["app*", "backend*", "scripts*"]
exclude = ["tests*", "docs*", "data*", "logs*", "reports*", "results*", "eval_results*", "upstream_contribution*", "frontend*"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
markers = [
    "asyncio: async test",
    "slow: slow test",
    "integration: integration test",
    "requires_db: requires real MongoDB/Redis",
    "ai: requires AI API key",
]
asyncio_mode = "auto"
